# CallofDuty.py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUMMARY.md  pyproject.toml  setup.py  test.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
callofduty/: __init__.py  auth.py  client.py  enums.py  errors.py  feed.py  http.py  leaderboard.py  loadout.py  loot.py  match.py  object.py  player.py  season.py  squad.py  stamp.py  user.py  utils.py
