[tool.poetry]
name = "callofduty.py"
version = "0.1.0"
description = "CallofDuty.py is an asynchronous, object-oriented Python wrapper for the Call of Duty API."
authors = ["EthanC"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EthanC/CallofDuty.py"
keywords = [
    "call-of-duty-py",
    "callofduty",
    "call-of-duty",
    "cod",
    "modern-warfare",
    "black-ops",
    "api",
    "wrapper",
    "async",
    "asynchronous",
    "object-oriented"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"
rope = "^0.14.0"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
