[tool.poetry]
name = "callofduty.py"
version = "1.2.0"
description = "CallofDuty.py is an asynchronous, object-oriented Python wrapper for the Call of Duty API."
license = "MIT"
authors = ["EthanC <EthanC@github.com>"]
maintainers = ["Josh <Tustin@github.com>"]
readme = "README.md"
repository = "https://github.com/EthanC/CallofDuty.py"
keywords = [
    "call-of-duty-py",
    "callofduty",
    "call-of-duty",
    "cod",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [{ include = "callofduty" }]

[tool.poetry.urls]
"Discord" = "https://discord.gg/callofduty"
"Twitter" = "https://twitter.com/Mxtive"
"Changelog" = "https://github.com/EthanC/CallofDuty.py/releases"
"Issue Tracker" = "https://github.com/EthanC/CallofDuty.py/issues"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
black = "^19.10b0"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
python-dotenv = "^0.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
