[tool.poetry]
name = "callofduty.py"
version = "1.2.2"
description = "CallofDuty.py is an asynchronous, object-oriented Python wrapper for the Call of Duty API."
license = "MIT"
authors = ["EthanC <EthanC@github.com>"]
readme = "README.md"
repository = "https://github.com/EthanC/CallofDuty.py"
keywords = [
    "call-of-duty-py",
    "callofduty",
    "call-of-duty",
    "cod",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [{ include = "callofduty" }]

[tool.poetry.urls]
"Discord" = "https://discord.gg/CallofDuty"
"Twitter" = "https://twitter.com/Mxtive"
"Changelog" = "https://github.com/EthanC/CallofDuty.py/releases"
"Issue Tracker" = "https://github.com/EthanC/CallofDuty.py/issues"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]
pylint = "^2.9.5"
black = "^21.7b0"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
